# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

Hedgehog 2.0.0rc2 - 2015-07-09
------------------------------

* Add documentation source for packaging.


Hedgehog 2.0.0rc1 - 2015-05-29
------------------------------

* Allow building of just the importer or just the web interface by adding
  --disable-web and --disable-data-manager options to configure
* Installed tools in libexec/hedgehog/ and removed hedgehog prefix and 
  .sh extension
* Created a hedgehogctl control script to wrap the tools.
* Renamed several tools and made arguments consistent. Separate the RSSAC report
  scripts to better align with split installs
* Improved install instructions
* Removed the install-rpg target and made installation of the RPostgreSQLHelper
  consistent with other R packages that need installing.
* Add missing check for SED in configure

Hedgehog 2.0.0b2 - 2015-05-05
-----------------------------

* Support for Vagrant Provisioning (thanks melalj)
* Various installation changes to support packaging (thanks arhbkb)
* Changed the yaml parsing to use the Perl YAML::Tiny library
* Changed the default_interactive_plot_type to svg (instead of flash)
* Static Traffic Volume plot is now faceted by Transport vs IP version
* Traffic Query/Response Difference plots added (requires R package dplyr)
* RPostgreSQLHelper installed as separate package. This requires running
 'make install ; make install-rpg' on installation now.
* Added vertical axis labels to googlevis line charts
* Added node_id index to data tables
* Added support for connecting to a remote database and password support
* Fixed color palette in annotated charts
* Work around for bug: mages/googleVis#14