@@ -1,0 +1,88 @@
+#!/bin/bash
+#
+# Copyright 2015 Internet Corporation for Assigned Names and Numbers.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# 
+# http://www.apache.org/licenses/LICENSE-2.0
+# 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+#
+# Developed by Sinodun IT (www.sinodun.com)
+#
+
+# 
+# File:   000011_ddl_geoip
+#
+
+eval $(@LIBEXEC@/conf_read)
+
+DB_NAME=$hhconfig_database_name
+DATA_DIR=$hhconfig_directories_data
+SQ="'"
+export PGPASSWORD=$hhconfig_database_owner_pass
+
+NEW_DDL_SERIAL=11
+REQUIRED_DDL_SERIAL=$(( $NEW_DDL_SERIAL - 1 ))
+NEW_API_VERSION=9
+REQUIRED_API_VERSION=$(( $NEW_API_VERSION - 1 ))
+
+DSC_SCHEMA="dsc"
+
+usage () {
+    echo
+    echo "Usage: $(basename $0) options"
+    echo
+    echo "Supported options:"
+    echo "  -h Show this help."
+    exit 1
+}
+
+
+while getopts ":csh" opt; do
+    case $opt in
+        h  ) usage ;;
+        \? ) usage ;;
+    esac
+done
+
+echo "`date`: $0 COMMENCED"
+USER=$(whoami)
+[ $USER != $hhconfig_database_owner ] && echo "Must be $hhconfig_database_owner to run this script" && exit 1
+
+DB_API_VERSION=`psql -h $hhconfig_database_host $DB_NAME -tc  "select version from dsc.version;"`
+[ $DB_API_VERSION != $REQUIRED_API_VERSION ] && echo "Error: Database API version incorrect." && exit 1
+
+LAST_SERIAL=`psql -h $hhconfig_database_host $DB_NAME -tc  "select max(serial) from dsc.internal_version;"`
+[ $LAST_SERIAL != $REQUIRED_DDL_SERIAL ] && echo "Error: ddl scripts not run in correct order." && exit 1
+
+psql -h $hhconfig_database_host $DB_NAME -qtc '\dx' | grep ip4r | grep dsc
+[ $? -eq 1 ] && \
+echo "No ip4r extension installed. Ensure that the ip4r package is installed." && \
+echo "Then connect to the $DB_NAME database as a superuser and run the command \"CREATE EXTENSION ip4r SCHEMA dsc;\"" && \
+exit 1
+
+psql -h $hhconfig_database_host $DB_NAME <<EOF
+BEGIN;
+  
+CREATE TABLE geoip (
+  ip_range iprange PRIMARY KEY,
+  latitude real,
+  longitude real );
+
+CREATE INDEX ix_ip_range ON geoip USING gist (ip_range);
+
+UPDATE $DSC_SCHEMA.version SET version = $NEW_API_VERSION;
+INSERT INTO $DSC_SCHEMA.internal_version ( serial, script, description, applied ) VALUES ( $NEW_DDL_SERIAL, '$0', 'Added new geoip table and index', now() );
+COMMIT;
+EOF
+
+echo "`date`: $0 COMPLETED"
