@@ -133,6 +133,7 @@ echo "Running DDL scripts"
 # for us. Still need to run the script too ensure database versions are correct.
 @LIBEXEC@/DDL_updates/000009_ddl_node_index -s
 @LIBEXEC@/DDL_updates/000010_ddl_tlds
+@LIBEXEC@/DDL_updates/000011_ddl_geoip
 ###########################################################
 
 ###################  POPULATE TABLES  #####################
@@ -140,6 +141,7 @@ echo "Running DDL scripts"
 echo "Populate servers and nodes"
 @LIBEXEC@/database_update_nodes -s
 @LIBEXEC@/database_update_tlds
+@LIBEXEC@/database_update_geoip
 ###########################################################
 
 #############  PARTITION DATA TABLES  #####################
