@@ -14,11 +14,19 @@
 # limitations under the License.
 #
 
+Hedgehog 2.1.0rc1 - 2015-06-22
+------------------------------
+
+* Added some support for displaying IDN in their unicode glyphs
+* Added separate graphs for different types of TLD (Qtype for most popular TLD)
+* Added GeoLite2 data created by MaxMind, available from
+  http://www.maxmind.com
+
+
 Hedgehog 2.0.0rc2 - 2015-07-09
 ------------------------------
 
 * Add documentation source for packaging.
-
 
 Hedgehog 2.0.0rc1 - 2015-05-29
 ------------------------------
